fix:设置wrap换行

--- a/packages/pc/src/components/账单管理视图/index.less
+++ b/packages/pc/src/components/账单管理视图/index.less
@@ -1,5 +1,6 @@
 .consumption-bill-view {
   display: flex;
+  flex-wrap: wrap;
   border: 1px solid #ccc;
   padding: 6px 12px;
   gap: 12px;
